fixed certain pages overflowing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -99,7 +99,7 @@ body {
 
 html,
 body {
-  max-width: 100% !important;
+  max-width: 100vw !important;
 }
 
 /******************************************
@@ -225,17 +225,13 @@ body {
 /* Latest Trained */
 .latestTrained {
   min-height: 70vh;
-  width: 100vw;
+  max-width: 100vw;
   background-color: transparent;
 }
 
 /* ///////////////////////////////////// */
 
 /* WHAT WE DO SECTION */
-
-.blog {
-  color: rgb(25, 76, 142);
-}
 
 .whatWeDo {
   padding-top: 35%;
@@ -264,9 +260,6 @@ body {
   border-bottom-width: 1px;
 }
 
-.fontTitle {
-  font-family: Poppins;
-}
 
 .card-img-top {
   width: fit-content;
@@ -312,7 +305,7 @@ body {
 /* About */
 
 .aboutHero {
-  height: 85vh;
+  height: 87vh;
 }
 
 .aboutSection h2 {
